--- a/rick-morty-app/www/css/index.css
+++ b/rick-morty-app/www/css/index.css
@@ -1,92 +1,87 @@
-* {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+.cflex_col {
+    display: flex;
+    flex-direction: column;
 }
 
-body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);
-    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
-    font-size:12px;
-    height:100vh;
-    margin:0px;
-    padding:0px;
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
-    text-transform:uppercase;
-    width:100%;
+.cflex_row {
+    display: flex;
+    flex-direction: row;
 }
 
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+.cflex_ai_start {
+    align-items: flex-start;
 }
 
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
+.cflex_ai_center {
+    align-items: center;
 }
 
-h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
+.cflex_jc_center {
+    justify-content: center;
 }
 
-.event {
-    border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+.cflex_jc_around {
+    justify-content: space-around;
 }
 
-.event.listening {
-    background-color:#333333;
-    display:block;
+.cflex_jc_start {
+    justify-content: flex-start;
 }
 
-.event.received {
-    background-color:#4B946A;
-    display:none;
+.cflex_jc_end {
+    justify-content: flex-end;
 }
 
-#deviceready.ready .event.listening { display: none; }
-#deviceready.ready .event.received { display: block; }
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+.cflex_jc_between {
+    justify-content: space-between;
 }
 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+.sidenav_item {
+    font-size: 20px;
 }
 
+.sidenav_item:hover {
+    background-color: #dbdbdb;
+}
 
-@media screen and (prefers-color-scheme: dark) {
-    body {
-        background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
-    }
+.sidenav_icon {
+    color: gray;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
+.sidenav_btn {
+    background-color: gray;
+    margin: 5px;
+}
+
+.sidenav_btn:hover {
+    background-color: #9e9e9e;
+}
+
+.search_input {
+    margin-right: 10px !important;
+    margin-left: 10px !important;
+    height: 35px !important;
+}
+
+.search_btn {
+    background-color: gray;
+}
+
+.search_btn:hover {
+    background-color: #9e9e9e;
+}
+
+.pagination_txt {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.pagination_btn {
+    background-color: gray;
+}
+
+.pagination_btn:hover {
+    background-color: #9e9e9e;
 }
