--- a/rick-morty-app/www/css/index.css
+++ b/rick-morty-app/www/css/index.css
@@ -85,3 +85,10 @@
 .pagination_btn:hover {
     background-color: #9e9e9e;
 }
+
+.loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+}
