--- a/rick-morty-app/www/css/index.css
+++ b/rick-morty-app/www/css/index.css
@@ -51,12 +51,7 @@
 }
 
 .sidenav_btn {
-    background-color: gray;
     margin: 5px;
-}
-
-.sidenav_btn:hover {
-    background-color: #9e9e9e;
 }
 
 .search_input {
@@ -65,23 +60,38 @@
     height: 35px !important;
 }
 
-.search_btn {
-    background-color: gray;
-}
-
-.search_btn:hover {
-    background-color: #9e9e9e;
-}
-
 .pagination_txt {
     margin-right: 10px;
     margin-left: 10px;
 }
 
-.pagination_btn {
-    background-color: gray;
+.modal {
+    width: 90vw;
+    min-height: 87.5vh;
+    overflow: scroll;
 }
 
-.pagination_btn:hover {
-    background-color: #9e9e9e;
+.modal .modal-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modal .modal-content h4 {
+    padding: 0;
+    margin: 0;
+}
+
+.modal .modal-content h5 {
+    margin-top: .25rem;
+}
+
+.modal .modal-content .back_btn {
+    margin-top: 1rem;
+}
+
+.modal .modal_image {
+    width: 100%;
+    max-height: 50%;
 }
